# apps/api/src/database/schema/index.ts
@@ -1,1 +1,2 @@
 export * from './auth';
+export * from './timestamps';
