# apps/api/src/database/schema/timestamps.ts
@@ -1,0 +1,24 @@
+import { index, pgTable, text, timestamp, uuid } from 'drizzle-orm/pg-core';
+import { user } from './auth';
+
+export const timestamps = pgTable(
+  'timestamps',
+  {
+    id: uuid('id').defaultRandom().primaryKey(),
+    userId: text('user_id')
+      .notNull()
+      .references(() => user.id, { onDelete: 'cascade' }),
+    note: text('note').notNull(),
+    dateOccurredAt: timestamp('date_occurred_at', {
+      withTimezone: true,
+    }).notNull(),
+    createdAt: timestamp('created_at', { withTimezone: true })
+      .defaultNow()
+      .notNull(),
+    updatedAt: timestamp('updated_at', { withTimezone: true })
+      .defaultNow()
+      .$onUpdate(() => new Date())
+      .notNull(),
+  },
+  (table) => [index('timestamps_userId_idx').on(table.userId)],
+);
