# apps/api/src/models/create-timestamp.model.ts
@@ -1,0 +1,9 @@
+import { ApiProperty } from '@nestjs/swagger';
+
+export class CreateTimestampModel {
+  @ApiProperty({ example: 'Wrote first timestamp note' })
+  note!: string;
+
+  @ApiProperty({ format: 'date-time' })
+  dateOccurredAt!: string;
+}
