# apps/api/src/models/update-timestamp.model.ts
@@ -1,0 +1,9 @@
+import { ApiPropertyOptional } from '@nestjs/swagger';
+
+export class UpdateTimestampModel {
+  @ApiPropertyOptional({ example: 'Updated timestamp note' })
+  note?: string;
+
+  @ApiPropertyOptional({ format: 'date-time' })
+  dateOccurredAt?: string;
+}
